fix alignment for firefox

--- a/styles/media.css
+++ b/styles/media.css
@@ -1,4 +1,8 @@
 @media screen and (max-width: 600px) {
+  .wrapper {
+    align-items: flex-start;
+  }
+
   .summary {
     flex-direction: column;
   }
